# patina

./: Cargo.toml  Makefile.toml  cspell.yml
.github/workflows/: CiWorkflow.yml  calculate-unsafe-code.yml  ci-workflow.yml  crate-version-update.yml  publish-mdbook.yml  publish-release.yml  rust-version-check.yml
components/patina_adv_logger/: Cargo.toml
components/patina_adv_logger/src/: component.rs  logger.rs
components/patina_mm/: Cargo.toml
components/patina_performance/: Cargo.toml
components/patina_samples/: Cargo.toml
components/patina_smbios/: Cargo.toml
components/patina_smbios/examples/: vendor_oem.rs
components/patina_smbios/src/: component.rs  lib.rs  manager.rs  smbios_derive.rs  smbios_record.rs
components/patina_smbios/tests/: vendor_oem.rs
core/patina_debugger/: Cargo.toml
core/patina_internal_collections/: Cargo.toml
core/patina_internal_cpu/: Cargo.toml
core/patina_internal_depex/: Cargo.toml
core/patina_internal_device_path/: Cargo.toml
core/patina_internal_device_path/src/: lib.rs
core/patina_stacktrace/: Cargo.toml
core/patina_stacktrace/src/: byte_reader.rs  pe.rs
docs/src/integrate/: patina_dxe_core_requirements.md
patina_dxe_core/: Cargo.toml
patina_dxe_core/src/: gcd.rs  lib.rs  perf_timer.rs  runtime.rs
patina_dxe_core/src/gcd/: spin_locked_gcd.rs
sdk/patina/: Cargo.toml
sdk/patina/benches/: bench_component.rs
sdk/patina/src/: boot_services.rs  lib.rs  (+5 more)
sdk/patina_ffs/: Cargo.toml
sdk/patina_ffs_extractors/: Cargo.toml
sdk/patina_macro/: Cargo.toml
supply-chain/: audits.toml  config.toml
(+31 files in other folders)
