[package]
name = "patina_samples"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "README.md"
description = "Sample components for testing and reference."

[lints]
workspace = true

[dependencies]
log = { workspace = true }
patina = { workspace = true }
patina_macro = { workspace = true }
patina_smbios = { workspace = true }

[features]
std = []
